# reda

./: Cargo.toml  README.md
reda-gds/: Cargo.toml
reda-lef/: Cargo.toml
reda-lef/src/: lib.rs
reda-lef/src/io/: mod.rs
reda-lef/src/io/read/: error.rs
reda-lef/src/model/: base.rs  layer.rs  mod.rs
reda-spice/: Cargo.toml  README.md
reda-spice/data/: addr_mos.sp  filter.sp
reda-spice/examples/: ac_coupled_amplifier.rs  dc-sweep.rs  low-pass_rc_filter.rs  millman_theorem.rs  ngspice_shared.rs  read_spice.rs  resistor_bridge.rs  thévenin_representation.rs  transient_sin.rs  voltage_current_divider.rs
reda-spice/src/: lib.rs
reda-spice/src/model/: mod.rs  value.rs
reda-spice/src/model/components/: basic.rs  bjt.rs  mod.rs  model.rs  mosfet.rs
reda-spice/src/model/control/: meas.rs  sim.rs
reda-spice/src/model/sources/: ac.rs  mod.rs  pulse.rs  pwl.rs  sine.rs
reda-spice/src/model/subckt/: mod.rs
reda-spice/src/netlist/: add.rs  mod.rs
reda-spice/src/parse/: base.rs  components.rs  measures.rs  mod.rs  simulate.rs  source.rs  subckt.rs
reda-spice/src/probe/analysis/: ac.rs  dc.rs  error.rs  op.rs  tran.rs
reda-spice/src/probe/draw/: mod.rs
reda-spice/src/simulate/: mod.rs
reda-spice/src/simulate/ngspice/server/: mod.rs  rawfile.rs
reda-spice/src/simulate/ngspice/shared/: api.rs  mod.rs  plot.rs
reda-unit/: Cargo.toml
reda-unit/macros/: Cargo.toml
rgds/: Cargo.toml  README.md
rgds/examples/: cell.rs  err.rs  sram.rs  text.rs
rlef/: Cargo.toml  README.md
rlef/data/: freesdk45_tech.lef
rlef/src/io/read/: base.rs  mod.rs
rlef/src/model/: makro.rs
rspice/: Cargo.toml  README.md
rspice/examples/: ac_coupled_amplifier.rs  dc-sweep.rs  low-pass_rc_filter.rs  millman_theorem.rs  ngspice_shared.rs  read_spice.rs  resistor_bridge.rs  thévenin_representation.rs  transient_sin.rs  voltage_current_divider.rs
rspice/src/: lib.rs
rspice/src/model/: mod.rs  value.rs
rspice/src/model/components/: basic.rs  diode.rs  model.rs  mosfet.rs
rspice/src/model/control/: meas.rs  mod.rs  sim.rs
rspice/src/model/sources/: ac.rs  mod.rs  pulse.rs  pwl.rs  sine.rs
rspice/src/model/subckt/: mod.rs
rspice/src/netlist/: add.rs  mod.rs
rspice/src/parse/: base.rs  components.rs  error.rs  measures.rs  mod.rs  simulate.rs  source.rs
rspice/src/probe/: mod.rs
rspice/src/probe/analysis/: ac.rs  dc.rs  error.rs  mod.rs  op.rs  tran.rs
rspice/src/probe/draw/: error.rs
rspice/src/simulate/ngspice/: error.rs  mod.rs
rspice/src/simulate/ngspice/server/: mod.rs  rawfile.rs
rspice/src/simulate/ngspice/shared/: api.h  callback.rs  mod.rs  plot.rs
runit/: Cargo.toml  README.md
runit/macros/src/: lib.rs
