[workspace]
members = [
    "runit",
    "rgds",
    "rlef",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "EDA toolkit in Rust"
license = "MIT"

[workspace.dependencies]
runit = { path = "./runit", package = "runit", version = "0.1.0" }
rgds = { path = "./rgds", package = "rgds", version = "0.1.0" }
rlef = { path = "./rlef", package = "rlef", version = "0.1.0" }

serde = "1.0.219"
paste = "1.0"
serde_json = "1.0.141"
chrono = "0.4.41"
derive_builder = "0.20.2"
thiserror = "2.0.12"
clap = { version = "4.4.0", features = ["derive"] }
nom = "6.0"