[workspace]
members = [
    "runit",
    "rgds",
    "rlef",
    "rspice",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "EDA toolkit in Rust"
license = "MIT"

[workspace.dependencies]
runit = { path = "./runit", package = "runit", version = "0.1.0" }
rgds = { path = "./rgds", package = "rgds", version = "0.1.0" }
rlef = { path = "./rlef", package = "rlef", version = "0.1.0" }

serde = "1.0.219"
paste = "1.0"
serde_json = "1.0.141"
chrono = "0.4.41"
derive_builder = "0.20.2"
thiserror = "2.0.12"
clap = { version = "4.4.0", features = ["derive"] }
nom = "6.0"
anyhow = "1.0.98"
byteorder = "1.5.0"
libc = "0.2.172"
libloading = "0.8.7"
log = "0.4.27"
num-complex = "0.4.6"
regex = "1.11.1"
plotters = "0.3.7"