[package]
name = "reda-unit"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
paste = { workspace = true }
reda-unit-macros = { path = "./macros" }
